# signal-bot

./: .gitignore  Cargo.toml  README.md  Rocket.toml  default.nix  package.nix  shell.nix
.github/workflows/: build_container.yml
additional/: Rocket.toml
nix/: rust.nix  sources.json
src/: jwt.rs  main.rs  signal_daemon.rs  signal_link.rs  signal_socket.rs
src/signal/: daemon.rs  link.rs  mod.rs  socket.rs
src/webhooks/: github.rs  mod.rs
