[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
tokio = { version = "1", features = ["full"] }

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json", "msgpack", "uuid"]
