[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
tokio = { version = "1", features = ["full"] }
qrcode = { version = "0.12", default-features = false, features = ["svg"] }
nix = "0.23.1"
simple_logger = "2.1.0"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json", "msgpack", "uuid"]

[dependencies.uuid]
version = "1.0.0-alpha.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]